Inventory items: location picker, custom field values, demo data
Item editor now loads the inventory's custom field definitions and
parsed metadata, renders an input for each field according to its
type (date, enum, text, number, yes/no), persists values back into
the item metadata, and offers a container picker so items can be
placed in or removed from a storage location in one save.

The item detail page reads the item's container path from the
location endpoint and shows it as a clickable breadcrumb so users
can step from an item to its containing room or shelf.

The demo seeder for inventories adds a small container forest per
demo station (Lager A → Regal 1/2 → Kiste 1–3, plus Backstage →
Schrank → Kiste 4), seeds the seven default kinds plus two
station-specific ones (Tour Case, Werkbank), places existing demo
items into the containers, and adds custom field definitions to the
Stiefel and Helm inventories with realistic values across the full
DATE/ENUM/TEXT/NUMBER/BOOLEAN range so the field editor and list
filtering have data on first launch.